5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4353/executions/1577_1330.log
== TEST (2019-03-21 18:11:40) 
-- CODE:
print(roound(250/6,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(roound(250/6,2))
NameError: name 'roound' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:11:40) 
-- CODE:
print(roound(250/6,2))
-- EXECUTION TIME:
0.177226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 1, in <module>
    print(roound(250/6,2))
NameError: name 'roound' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:11:53) 
-- CODE:
print(round(250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:11:53) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.145883
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
